--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
     "country-data-list": "^1.3.0",
+    "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
     "next": "14.2.3",
     "react": "18.3.1",
