--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.23",
+    "@types/react-csv": "^1.1.10",
     "axios": "^1.7.4",
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
     "next": "14.2.3",
     "react": "18.3.1",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
