--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build:auth" : "nx build superApp",
-    "start:auth" : "nx start superApp"
+    "start": "next start",
+    "build:auth" : "nx build superApp"
   },
   "private": true,
   "dependencies": {
