--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "react": "18.3.1",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
