--- a/apps/superApp/Dockerfile
+++ b/apps/superApp/Dockerfile
@@ -16,12 +16,10 @@ FROM node:20.11-alpine3.18 AS builder
 # Set the working directory
 WORKDIR /app
 
-COPY package*.json ./
-
+COPY . .
 # Install all the dependencies
 RUN npm install --force
 
-COPY . .
 # copy environment file
 #COPY .env.build .env
 # Generate the build of the application
@@ -31,6 +29,6 @@ FROM node:20.11-alpine3.18  AS production
 WORKDIR /app
 COPY --from=builder /app ./
 ENV NODE_ENV=production
-CMD ["npm" ,"start"]
+CMD ["npm" ,"start:superApp"]
 EXPOSE 3000
 
