--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:superApp": "nx run superApp:build",
     "start:superApp": "nx run superApp:start",
-    "reset" : "nx reset"
+    "reset": "nx reset"
   },
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.23",
     "@types/react-csv": "^1.1.10",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.4",
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
@@ -22,6 +23,7 @@
     "next": "14.2.3",
     "nookies": "^2.5.2",
     "react": "18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "18.3.1",
@@ -29,6 +31,7 @@
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-phone-input-2": "^2.15.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-select": "^5.8.0",
     "react-verification-input": "^4.1.2",
     "remixicon": "^4.3.0",
