--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,8 @@
       "@instanvi/ui-components": ["libs/ui-components/src/index.ts"],
       "@instanvi/ui-components/server": ["libs/ui-components/src/server.ts"],
       "@instanvi/utilities": ["libs/utilities/src/index.ts"],
-      "@instanvi/utilities/server": ["libs/utilities/src/server.ts"]
+      "@instanvi/utilities/server": ["libs/utilities/src/server.ts"],
+      "@potta/components": ["./apps/potta/src/components/*"],
     }
   },
   "exclude": ["node_modules", "tmp"]
