--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^11.18.0",
     "next": "14.2.3",
     "nookies": "^2.5.2",
     "react": "18.3.1",
@@ -32,6 +33,7 @@
     "react-google-flight-datepicker": "^0.1.20",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
+    "react-icomoon": "^2.5.7",
     "react-phone-input-2": "^2.15.1",
     "react-pro-sidebar": "^1.1.0",
     "react-select": "^5.8.0",
