invoice hooks setup

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_SECRET_ENCRYPT=0946323
 NEXT_PUBLIC_API_URL=https://staging.instanvi.com/gateway/api
+NEXT_PUBLIC_POTTA_API_URL=https://staging.instanvi.com/gateway/api
 NEXT_PUBLIC_SUPER_APP_PORT=4200
 
