--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icomoon": "^2.5.7",
+    "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-pro-sidebar": "^1.1.0",
     "react-select": "^5.8.0",
