--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-table": "^8.20.6",
     "@types/react-csv": "^1.1.10",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.4",
