--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.18.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "nookies": "^2.5.2",
     "react": "18.3.1",
     "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.4.1",
+    "react-barcode": "^1.5.3",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "18.3.1",
@@ -36,6 +38,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icomoon": "^2.5.7",
     "react-icons": "^5.4.0",
+    "react-moment": "^1.1.3",
     "react-phone-input-2": "^2.15.1",
     "react-pro-sidebar": "^1.1.0",
     "react-select": "^5.8.0",
@@ -76,12 +79,13 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "19.5.7",
+    "nx": "20.4.3",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2"
-  }
+  },
+  "nx": {}
 }
