--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.18.0",
+    "libphonenumber-js": "^1.11.20",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "nookies": "^2.5.2",
@@ -39,10 +40,11 @@
     "react-icomoon": "^2.5.7",
     "react-icons": "^5.4.0",
     "react-moment": "^1.1.3",
-    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-pro-sidebar": "^1.1.0",
     "react-select": "^5.8.0",
     "react-verification-input": "^4.1.2",
+    "react-world-flags": "^1.6.0",
     "remixicon": "^4.3.0",
     "timezones-list": "^3.0.3",
     "tslib": "^2.3.0",
@@ -66,6 +68,7 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/react-world-flags": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "10.4.13",
