--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-csv": "^1.1.10",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.4",
+    "clsx": "^2.1.1",
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
@@ -44,11 +45,14 @@
     "react-select": "^5.8.0",
     "react-verification-input": "^4.1.2",
     "remixicon": "^4.3.0",
+    "tailwind-merge": "^3.0.2",
     "timezones-list": "^3.0.3",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@iconify/react": "^5.2.0",
     "@nx/eslint": "19.5.7",
     "@nx/eslint-plugin": "19.5.7",
     "@nx/jest": "19.5.7",
