--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/react-csv": "^1.1.10",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.18.0",
     "libphonenumber-js": "^1.11.20",
+    "lucide-react": "^0.479.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "nookies": "^2.5.2",
@@ -43,11 +45,16 @@
     "react-moment": "^1.1.3",
     "react-phone-number-input": "^3.4.12",
     "react-pro-sidebar": "^1.1.0",
+    "react-resizable-panels": "^2.1.7",
     "react-select": "^5.8.0",
     "react-verification-input": "^4.1.2",
     "react-world-flags": "^1.6.0",
+    "recharts": "^2.15.1",
     "remixicon": "^4.3.0",
+    "sonner": "^2.0.1",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
