--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-progress": "^1.1.2",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-csv": "^1.1.10",
