--- a/apps/potta/tsconfig.json
+++ b/apps/potta/tsconfig.json
@@ -12,20 +12,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
-    "paths":{
-"@potta/*":["./src/*"],
-"@/*": ["./*"]
-
+    "paths": {
+      "@potta/*": ["./src/*"],
+      "@/*": ["./*"]
     },
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "types": [
-      "jest",
-      "node"
-    ]
+    "types": ["jest", "node"]
   },
   "include": [
     "**/*.ts",
@@ -37,10 +33,5 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "jest.config.ts",
-    "**/*.spec.ts",
-    "**/*.test.ts"
-  ]
+  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
