--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-csv": "^1.1.10",
-    "apexcharts": "^3.53.0",
+    "apexcharts": "^4.5.0",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
+    "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.18.0",
     "libphonenumber-js": "^1.11.20",
@@ -48,16 +52,18 @@
     "react-pro-sidebar": "^1.1.0",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.8.0",
+    "react-tailwindcss-datepicker": "^2.0.0",
     "react-verification-input": "^4.1.2",
     "react-world-flags": "^1.6.0",
     "recharts": "^2.15.1",
     "remixicon": "^4.3.0",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "tslib": "^2.3.0",
+    "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
     "yup": "^1.4.0"
   },
