feat: Enhance Axios configuration with request/response interceptors for logging and headers
refactor: Update POS configuration to include additional headers and logging in requests

fix: Correct API endpoint in customer API calls

style: Improve formatting and consistency in various components

chore: Update budget card component to use new types and improve layout

refactor: Migrate budget types to new structure and remove old definitions

fix: Update reimbursement table to use new icon and improve styling

chore: Refactor cash payment component to remove unused printer settings and improve logic

style: Update button styles for better visual consistency

chore: Extend Tailwind CSS configuration with new color utilities

chore: Update package dependencies to include new Radix UI components

--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -17316,6 +17316,11 @@
       },
       {
         "source": "@instanvi-global/source",
+        "target": "npm:dayjs",
+        "type": "static"
+      },
+      {
+        "source": "@instanvi-global/source",
         "target": "npm:framer-motion",
         "type": "static"
       },
@@ -45260,5 +45265,5 @@
   },
   "version": "6.0",
   "errors": [],
-  "computedAt": 1744285922452
+  "computedAt": 1744381456955
 }
