--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.18.0",
     "libphonenumber-js": "^1.11.20",
     "lucide-react": "^0.479.0",
