--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@heroui/date-picker": "^2.3.17",
+    "@heroui/react": "^2.7.6",
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "^3.8.0",
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
