--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.6",
@@ -31,6 +32,7 @@
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.18.0",
     "libphonenumber-js": "^1.11.20",
@@ -44,6 +46,7 @@
     "react-barcode": "^1.5.3",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.3",
     "react-google-flight-datepicker": "^0.1.20",
