--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@nextui-org/react": "^2.4.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.2.2",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-csv": "^1.1.10",
