refactor: update focus and hover styles to use green color for inputs and selects
- Changed focus and hover ring colors from blue to green in DateInput, Input, PhoneInput, Select, and TextArea components.
- Added phone number length validation based on country in PhoneInput component.
- Improved validation error handling and display in PhoneInput.
- Enhanced report content rendering in ReportViewContent component.
- Cleaned up code formatting and structure for better readability.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ out
 .idea
 .nx/workspace-data/d/daemon.log
 .nx/workspace-data/d/daemon.log
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
