--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -182,7 +182,7 @@
               "{workspaceRoot}/jest.preset.js"
             ],
             "outputs": [
-              "{workspaceRoot}/coverage/apps/superApp"
+              "{workspaceRoot}\\coverage\\apps\\superApp"
             ],
             "executor": "nx:run-commands",
             "configurations": {},
@@ -317,7 +317,7 @@
               "{workspaceRoot}/jest.preset.js"
             ],
             "outputs": [
-              "{workspaceRoot}/coverage/apps/potta"
+              "{workspaceRoot}\\coverage\\apps\\potta"
             ],
             "executor": "nx:run-commands",
             "configurations": {},
@@ -56562,5 +56562,5 @@
   },
   "version": "6.0",
   "errors": [],
-  "computedAt": 1747305434145
+  "computedAt": 1747327705377
 }
