--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-icomoon": "^2.5.7",
     "react-icons": "^5.4.0",
     "react-moment": "^1.1.3",
+    "react-organizational-chart": "^2.2.1",
     "react-phone-number-input": "^3.4.12",
     "react-pro-sidebar": "^1.1.0",
     "react-resizable-panels": "^2.1.7",
