--- a/apps/potta/package.json
+++ b/apps/potta/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@instanvi-global/source",
+  "name": "potta",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "next.config.js",
   "scripts": {
-    "build:superApp": "nx run superApp:build",
-    "start:superApp": "nx run superApp:start",
-    "reset": "nx reset"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build"
   },
   "private": true,
   "dependencies": {
@@ -43,8 +46,8 @@
     "country-data-list": "^1.3.0",
     "country-list-with-dial-code-and-flag": "^5.0.5",
     "country-state-city": "^3.2.1",
-    "critters": "^0.0.20",
     "crypto-js": "^4.2.0",
+    "critters": "^0.0.20",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.18.0",
@@ -92,13 +95,6 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.2.0",
-    "@nx/eslint": "19.5.7",
-    "@nx/eslint-plugin": "19.5.7",
-    "@nx/jest": "19.5.7",
-    "@nx/js": "19.5.7",
-    "@nx/next": "19.5.7",
-    "@nx/react": "19.5.7",
-    "@nx/workspace": "19.5.7",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -125,13 +121,11 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "20.4.3",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2"
-  },
-  "nx": {}
+  }
 }
