--- a/apps/potta/project.json
+++ b/apps/potta/project.json
@@ -5,10 +5,69 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project potta --web",
- "targets": {
-    "dev": {
+  "targets": {
+    "build": {
+      "executor": "@nx/next:build",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
-        "port":4300
+        "outputPath": "dist/apps/potta"
+      },
+      "configurations": {
+        "development": {
+          "outputPath": "apps/potta"
+        },
+        "production": {}
+      }
+    },
+    "serve": {
+      "executor": "@nx/next:server",
+      "defaultConfiguration": "development",
+      "options": {
+        "buildTarget": "potta:build",
+        "dev": true
+      },
+      "configurations": {
+        "development": {
+          "buildTarget": "potta:build:development",
+          "dev": true
+        },
+        "production": {
+          "buildTarget": "potta:build:production",
+          "dev": false
+        }
+      }
+    },
+    "export": {
+      "executor": "@nx/next:export",
+      "options": {
+        "buildTarget": "potta:build:production"
+      }
+    },
+    "dev": {
+      "executor": "@nx/next:server",
+      "options": {
+        "buildTarget": "potta:build",
+        "dev": true,
+        "port": 4300
+      }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "apps/potta/jest.config.ts",
+        "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
       }
     }
   }
