--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.6",
+    "@types/d3": "^7.4.3",
+    "@types/d3-org-chart": "^3.1.2",
     "@types/react-csv": "^1.1.10",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.4",
@@ -48,6 +50,8 @@
     "country-state-city": "^3.2.1",
     "critters": "^0.0.20",
     "crypto-js": "^4.2.0",
+    "d3": "^7.9.0",
+    "d3-org-chart": "^3.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.18.0",
@@ -81,6 +85,7 @@
     "react-tailwindcss-datepicker": "^2.0.0",
     "react-verification-input": "^4.1.2",
     "react-world-flags": "^1.6.0",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "remixicon": "^4.3.0",
     "sonner": "^2.0.1",
