--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "libphonenumber-js": "^1.11.20",
     "lucide-react": "^0.479.0",
     "moment": "^2.30.1",
-    "next": "14.2.3",
+    "next": "16.0.3",
     "nookies": "^2.5.2",
-    "react": "18.3.1",
+    "react": "19.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-apexcharts": "^1.4.1",
     "react-barcode": "^1.5.3",
@@ -69,7 +69,7 @@
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "19.2.0",
     "react-dropzone": "^14.2.3",
     "react-google-flight-datepicker": "^0.1.20",
     "react-hook-form": "^7.52.2",
@@ -88,6 +88,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "remixicon": "^4.3.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.1.0",
@@ -117,20 +118,20 @@
     "@types/jest": "^29.4.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "@types/react-world-flags": "^1.6.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
-    "eslint": "~8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "20.4.3",
