Add build configuration and enhance Potta application structure
- Introduced .tsbuildinfo for TypeScript build information.
- Updated nx.json by removing unused Jest and ESLint plugins for cleaner configuration.
- Added build script for Potta in package.json to streamline the build process.
- Created vercel.json for deployment configuration on Vercel.
- Refactored procurement components to improve user interaction and added ProcurementActionSidebar for better action management.
- Updated various files for consistency and improved functionality, including auth context and routing components.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "build:superApp": "nx run superApp:build",
+    "build:potta": "nx run potta:build",
     "start:superApp": "nx run superApp:start",
     "dev": "cd apps/potta && next dev -p 4300",
     "dev:potta": "cd apps/potta && next dev -p 4300",
