Refactor Vercel configuration and update project graph
- Simplified vercel.json by removing unnecessary build and output directory settings.
- Updated project-graph.json to reflect changes in SuperApp and Potta configurations, including target adjustments and metadata enhancements.
- Cleaned up unused configurations to streamline project setup.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "buildCommand": "npx nx build potta",
-  "outputDirectory": "dist/apps/potta",
-  "framework": "nextjs",
-  "installCommand": "npm install",
-  "devCommand": "npx nx dev potta",
-  "rootDirectory": "apps/potta"
+  "framework": "nextjs"
 }
-
