--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npx nx build potta",
+  "buildCommand": "npm run build:potta",
   "framework": "nextjs",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "cd ../.. && npm install --legacy-peer-deps"
 }
