Update Vercel configuration for Potta build process
- Changed build command in vercel.json to use 'cd ../.. && npx nx build potta' for correct directory navigation.
- Updated project graph hash and computed timestamp in related workspace data files to reflect recent changes.
- Enhanced logging in daemon.log to track modifications to vercel.json.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:potta",
+  "buildCommand": "cd ../.. && npx nx build potta",
   "framework": "nextjs",
   "installCommand": "cd ../.. && npm install --legacy-peer-deps"
 }
