Update Vercel configuration and project workspace for Potta
- Changed output directory in vercel.json to 'dist/apps/potta/.next' for better alignment with Next.js build output.
- Updated project graph hash and computed timestamp in workspace data files to reflect recent changes.
- Enhanced logging in daemon.log to monitor modifications to vercel.json for improved visibility.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npx nx build potta",
-  "outputDirectory": "dist/apps/potta",
+  "outputDirectory": "dist/apps/potta/.next",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps"
 }
