Add Vercel build script and update project configuration
- Introduced a new build script (.vercel-build.sh) to streamline the build process for the Potta application.
- Updated package.json to include a new script command for Vercel builds.
- Modified vercel.json to utilize the new build script instead of a direct command.
- Enhanced project graph to reflect changes in build configurations and scripts.

--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -33,35 +33,7 @@
       "type": "app",
       "data": {
         "root": "apps/superApp",
-        "sourceRoot": "apps/superApp",
-        "name": "superApp",
-        "tags": [
-          "npm:private"
-        ],
-        "metadata": {
-          "targetGroups": {
-            "NPM Scripts": [
-              "start"
-            ]
-          },
-          "js": {
-            "packageName": "superApp",
-            "isInPackageManagerWorkspaces": false
-          }
-        },
         "targets": {
-          "start": {
-            "executor": "nx:run-script",
-            "options": {
-              "script": "start"
-            },
-            "metadata": {
-              "scriptContent": "next start -p 4200",
-              "runCommand": "npm run start"
-            },
-            "configurations": {},
-            "parallelism": true
-          },
           "build": {
             "executor": "@nx/next:build",
             "outputs": [
@@ -86,6 +58,40 @@
               "^production"
             ],
             "cache": true
+          },
+          "dev": {
+            "executor": "@nx/next:server",
+            "options": {
+              "buildTarget": "superApp:build",
+              "dev": true,
+              "port": 4200
+            },
+            "configurations": {},
+            "parallelism": true,
+            "cache": true
+          },
+          "start": {
+            "executor": "nx:run-script",
+            "options": {
+              "script": "start"
+            },
+            "metadata": {
+              "scriptContent": "next start -p 4200",
+              "runCommand": "npm run start"
+            },
+            "configurations": {},
+            "parallelism": true
+          },
+          "serve-static": {
+            "executor": "@nx/web:file-server",
+            "options": {
+              "buildTarget": "build",
+              "staticFilePath": "apps/superApp/out",
+              "port": 3000,
+              "spa": false
+            },
+            "configurations": {},
+            "parallelism": true
           },
           "serve": {
             "executor": "@nx/next:server",
@@ -113,17 +119,6 @@
             },
             "configurations": {},
             "parallelism": true
-          },
-          "dev": {
-            "executor": "@nx/next:server",
-            "options": {
-              "buildTarget": "superApp:build",
-              "dev": true,
-              "port": 4200
-            },
-            "configurations": {},
-            "parallelism": true,
-            "cache": true
           },
           "lint": {
             "executor": "@nx/eslint:lint",
@@ -164,18 +159,8 @@
             "cache": true
           }
         },
-        "$schema": "../../node_modules/nx/schemas/project-schema.json",
-        "projectType": "application",
-        "implicitDependencies": []
-      }
-    },
-    "potta": {
-      "name": "potta",
-      "type": "app",
-      "data": {
-        "root": "apps/potta",
-        "sourceRoot": "apps/potta",
-        "name": "potta",
+        "sourceRoot": "apps/superApp",
+        "name": "superApp",
         "tags": [
           "npm:private"
         ],
@@ -186,23 +171,21 @@
             ]
           },
           "js": {
-            "packageName": "potta",
+            "packageName": "superApp",
             "isInPackageManagerWorkspaces": false
           }
         },
+        "$schema": "../../node_modules/nx/schemas/project-schema.json",
+        "projectType": "application",
+        "implicitDependencies": []
+      }
+    },
+    "potta": {
+      "name": "potta",
+      "type": "app",
+      "data": {
+        "root": "apps/potta",
         "targets": {
-          "start": {
-            "executor": "nx:run-script",
-            "options": {
-              "script": "start"
-            },
-            "metadata": {
-              "scriptContent": "next start -p 4300",
-              "runCommand": "npm run start"
-            },
-            "configurations": {},
-            "parallelism": true
-          },
           "build": {
             "executor": "@nx/next:build",
             "outputs": [
@@ -227,6 +210,40 @@
               "^production"
             ],
             "cache": true
+          },
+          "dev": {
+            "executor": "@nx/next:server",
+            "options": {
+              "buildTarget": "potta:build",
+              "dev": true,
+              "port": 4300
+            },
+            "configurations": {},
+            "parallelism": true,
+            "cache": true
+          },
+          "start": {
+            "executor": "nx:run-script",
+            "options": {
+              "script": "start"
+            },
+            "metadata": {
+              "scriptContent": "next start -p 4300",
+              "runCommand": "npm run start"
+            },
+            "configurations": {},
+            "parallelism": true
+          },
+          "serve-static": {
+            "executor": "@nx/web:file-server",
+            "options": {
+              "buildTarget": "build",
+              "staticFilePath": "apps/potta/out",
+              "port": 3000,
+              "spa": false
+            },
+            "configurations": {},
+            "parallelism": true
           },
           "serve": {
             "executor": "@nx/next:server",
@@ -254,17 +271,6 @@
             },
             "configurations": {},
             "parallelism": true
-          },
-          "dev": {
-            "executor": "@nx/next:server",
-            "options": {
-              "buildTarget": "potta:build",
-              "dev": true,
-              "port": 4300
-            },
-            "configurations": {},
-            "parallelism": true,
-            "cache": true
           },
           "lint": {
             "executor": "@nx/eslint:lint",
@@ -305,6 +311,22 @@
             "cache": true
           }
         },
+        "sourceRoot": "apps/potta",
+        "name": "potta",
+        "tags": [
+          "npm:private"
+        ],
+        "metadata": {
+          "targetGroups": {
+            "NPM Scripts": [
+              "start"
+            ]
+          },
+          "js": {
+            "packageName": "potta",
+            "isInPackageManagerWorkspaces": false
+          }
+        },
         "$schema": "../../node_modules/nx/schemas/project-schema.json",
         "projectType": "application",
         "implicitDependencies": []
@@ -339,6 +361,7 @@
             "NPM Scripts": [
               "build:superApp",
               "build:potta",
+              "vercel-build",
               "start:superApp",
               "dev",
               "dev:potta",
@@ -372,6 +395,18 @@
             "metadata": {
               "scriptContent": "nx run potta:build",
               "runCommand": "npm run build:potta"
+            },
+            "configurations": {},
+            "parallelism": true
+          },
+          "vercel-build": {
+            "executor": "nx:run-script",
+            "options": {
+              "script": "vercel-build"
+            },
+            "metadata": {
+              "scriptContent": "nx run potta:build",
+              "runCommand": "npm run vercel-build"
             },
             "configurations": {},
             "parallelism": true
@@ -56420,17 +56455,6 @@
     ]
   },
   "version": "6.0",
-  "errors": [
-    {
-      "errors": [
-        [
-          null,
-          {}
-        ]
-      ],
-      "partialResults": [],
-      "name": "AggregateCreateNodesError"
-    }
-  ],
-  "computedAt": 1764006352823
+  "errors": [],
+  "computedAt": 1764006784677
 }
